# rest/delete_resource.go
@@ -11,15 +11,14 @@ import (
 //	@Tags			Resources
 //	@Accept			json
 //	@Produce		json
-//	@Param			project			path	string	true	"Project ID"
-//	@Param			language		path	string	true	"language tag"
-//	@Param			semver			path	string	true	"Sem version, you can not use wildcards"
-//	@Param			Authorization	header	string	true	"Bearer {token}"
-//	@Success		200				"No Content"
-//	@Failure		400				{object}	errs.Validation	"Bad Request"
-//	@Failure		404				{object}	errs.Custom		"Not Found"
-//	@Failure		500				{object}	errs.Custom		"Internal Server Error"
-//	@Router			/resources/:project/:language/:semver [delete]
+//	@Param			project		path	string	true	"Project ID"
+//	@Param			language	path	string	true	"language tag"
+//	@Param			semver		path	string	true	"Sem version, you can not use wildcards"
+//	@Success		200			"No Content"
+//	@Failure		400			{object}	errs.Validation	"Bad Request"
+//	@Failure		404			{object}	errs.Custom		"Not Found"
+//	@Failure		500			{object}	errs.Custom		"Internal Server Error"
+//	@Router			/resources/{project}/{language}/{semver} [delete]
 //
 // Marks a resource as deleted.
 func initDeleteResource(engine *gin.Engine) {
